# easy-dynamodb

./: Cargo.toml
src/: lib.rs  table.rs
