[package]
name = "easy-dynamodb"
version = "0.0.0"
edition = "2021"


[dependencies]
anyhow = "1.0"
aws-config = "0.55"
aws-sdk-dynamodb = "0.26"
serde = "1.0"
serde_dynamo = { version = "4.2", features = ["aws-sdk-dynamodb+0_26"] }
tokio-stream = "0.1"
tracing = "0.1"
uuid = { version = "1.3", features = ["serde"] }
